# todo-api2.0

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
src/: __init__.py  config.py  database.py  main.py  models.py
src/admin/: dependencies.py  router.py  service.py
src/auth/: dependencies.py  router.py  schemas.py  service.py
src/auth/security/: bcrypt.py  jwtoken.py
src/todo/: router.py  schemas.py  service.py
templates/: base.html
tests/: conftest.py  database.py  fixtures.py
tests/admin/: test_admin_router.py  test_router.py
tests/auth/: test_auth_router.py
tests/todo/: test_todo_router.py
tests/todos/: test_router.py
