[tool.poetry]
name = "todo-api20"
version = "0.1.0"
description = ""
authors = ["Jahongir <crazyout4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.11.1"}
passlib = "^1.7.4"
bcrypt = "4.0.1"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
